# zxc

./: .clang-format  .gitignore  .snyk  .sonarcloud.properties  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  SBOM.spdx.json.in  TODO.md  WHITEPAPER.md  cliff.toml  codecov.yml  libzxc.pc.in  meson.build  meson_options.txt  zxc.pc.in  zxcConfig.cmake.in
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CONTRIBUTING.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/requirements/: meson.txt
.github/workflows/: README.md  abi-check.yml  benchmark.yml  build.yml  build_all.yml  changelog.yml  codeql.yml  compat-os.yml  coverage.yml  fuzzing.yml  golden.yml  meson.yml  multiarch.yml  multicomp.yml  quality.yml  rfc-draft.yml  scorecard.yml  security.yml  vendors.yml  wrapper-go-test.yml  wrapper-go.yml  wrapper-nodejs-publish.yml  wrapper-nodejs.yml  wrapper-python-publish.yml  wrapper-python.yml  wrapper-rust-publish.yml  wrapper-rust.yml  wrapper-wasm.yml
conformance/: README.md  test_conformance.c
conformance/invalid/: bad_block_checksum.zxc  bad_block_size_field.zxc  bad_block_type.zxc  bad_checksum_algo.zxc  bad_enc_lit.zxc  bad_eof_compsize.zxc  bad_header_crc.zxc  bad_magic.zxc  bad_version.zxc  corrupt_payload.zxc  magic_then_zeros.zxc  too_short_4bytes.zxc  truncated_header_only.zxc  truncated_mid_block.zxc  v6_archive_glo_huffman.zxc
conformance/valid/: all_256_values.zxc  all_zeros_4k.zxc  all_zeros_64k.zxc  dict_embedded.expected  dict_embedded.zxc  dict_embedded_seekable.zxc  dict_http.expected  dict_http.zxc  dict_http.zxd  dict_seekable_l7.expected  dict_seekable_l7.zxc  dict_text.zxd  empty.zxc  glo_huffman_wide_l7.zxc  glo_pivco_wide_l7.expected  glo_pivco_wide_l7.zxc  long_match_64k.zxc  long_match_checksum.expected  long_match_checksum.zxc  max_offset_128k.expected  max_offset_128k.zxc  multiblock_mixed.zxc  multiblock_text.zxc  num_large_delta_16k.expected  num_large_delta_16k.zxc  num_seq_16k.expected  num_seq_16k.zxc  num_seq_64k.expected  num_seq_64k.zxc  num_small_delta_16k.expected  num_small_delta_16k.zxc  num_zero_delta_16k.zxc  one_byte.zxc  random_256.expected  random_256.zxc  random_4k.expected  random_4k.zxc  random_4k_checksum.expected  random_4k_checksum.zxc  random_64k.expected  (+25 more)
docs/: API.md  BENCHMARKS.md  Doxyfile.in  EXAMPLES.md  FORMAT.md  MIGRATION.md  WHITEPAPER.md
docs/abi/: libzxc-linux-x86_64.abi.xml  libzxc.suppr
docs/man/: zxc.1.md
include/: zxc.h  zxc_buffer.h  zxc_constants.h  zxc_core.h  zxc_dict.h  zxc_driver.h  zxc_error.h  zxc_export.h  zxc_opts.h  zxc_pstream.h  zxc_sans_io.h  zxc_seekable.h  zxc_stream.h
src/cli/: main.c
src/lib/: zxc_common.c  zxc_compress.c  zxc_decompress.c  zxc_deps.h  zxc_dict.c  zxc_dispatch.c  zxc_driver.c  zxc_huffman.c  zxc_huffman.h  zxc_internal.h  zxc_pivco_tables.c  zxc_pivco_tables.h  zxc_pstream.c  zxc_sais.c  zxc_seekable.c  zxc_suffix.c  zxc_suffix_array.c
tests/: fuzz.c  fuzz_decompress.c  fuzz_dict.c  fuzz_pstream.c  fuzz_roundtrip.c  fuzz_seekable.c  test.c  test_block_api.c  test_buffer_api.c  test_cli.sh  test_common.c  test_common.h  test_context_api.c  test_dict.c  test_format.c  test_main.c  test_misc.c  test_pstream_api.c  test_seekable.c  test_seekable_mt.c  test_static_ctx.c  test_stream_api.c
tests/format/: README.md  gen_golden.c  golden.sha256  golden_cases.h  test_golden.c
tests/format/golden/: 02_block_raw.zxc  03_block_ghi.zxc  04_block_glo.zxc  05_block_glo_huffman.zxc  06_block_num.zxc  06_checksum_per_block.zxc  07_multiple_blocks.zxc  08_multiple_blocks.zxc  08_seekable_table.zxc  09_block_dict.zxc  09_seekable_table.zxc  10_block_num16.zxc  10_block_num64.zxc  10_glo_offset16.zxc  11_block_num64.zxc  11_glo_rle.zxc  12_glo_huffman_dict.zxc  13_glo_huffman_wide.zxc  ghi.zxc  glo_huffman.zxc
wrappers/go/: README.md  go.mod  zxc.go  zxc_block.go  zxc_buffer.go  zxc_dict.go  zxc_dict_test.go  zxc_dup_unix.go  zxc_dup_windows.go  zxc_file.go  zxc_io.go  zxc_io_test.go  zxc_regression_test.go  zxc_seekable.go  zxc_seekable_export.go  zxc_seekable_test.go  zxc_stream.go  zxc_test.go
wrappers/nodejs/: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
wrappers/nodejs/lib/: index.d.ts  index.js
wrappers/nodejs/src/: zxc_addon.cc
wrappers/nodejs/test/: zxc.dict.test.js  zxc.seekable.test.js  zxc.streams.test.js  zxc.test.js
wrappers/python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
wrappers/python/requirements/: build-deps.in  build-deps.txt  build.in  build.txt  sdist.txt  test.txt
wrappers/python/src/zxc/: __init__.py  __init__.pyi  _zxc.c
wrappers/python/tests/: test_buffer.py  test_dict.py  test_io_adapters.py  test_pstream.py  test_seekable.py  test_stream.py
wrappers/rust/: .gitignore  Cargo.toml
wrappers/rust/zxc/: Cargo.toml  README.md
wrappers/rust/zxc-sys/: Cargo.toml  build.rs
wrappers/rust/zxc-sys/src/: lib.rs
wrappers/rust/zxc-sys/zxc/src/: lib
wrappers/rust/zxc/examples/: file_compression.rs  simple.rs
wrappers/rust/zxc/src/: ctx.rs  dict.rs  error.rs  file.rs  lib.rs  oneshot.rs  pstream.rs  seekable.rs  stdio.rs
wrappers/wasm/: README.md  package-lock.json  package.json  test.mjs  wasm_entry.c  zxc_wasm.js
